src/test/ui/codemap_tests/coherence-overlapping-inherent-impl-trait.stderr
error[E0592]: duplicate definitions with name `f`
  --> $DIR/coherence-overlapping-inherent-impl-trait.rs:4:14
   |
LL | impl dyn C { fn f() {} }
   |              ^^^^^^^^^ duplicate definitions for `f`
LL | impl dyn C { fn f() {} }
   |              --------- other definition for `f`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0592`.
